# antenna-docs

./: .markdown-link-check.json  .mdformat.toml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  noxfile.py  pyproject.toml  search.html
.github/workflows/: pre-commit.yml  publish-gh-pages.yml
docs/: conda_environment_creation.md  environment_creation_mila.md  index.md  migrating_to_drac.md  poetry_installation.md
docs/css/: extra.css
docs/sections/: developer-guide.md  user-guide.md
docs/sections/dev-guide/: developer-guide.md  update-documentation.md
docs/sections/user-guide/: account-creation.md  browsing-processed-data.md  exporting-data.md  processing-data.md  project-creation.md  reviewing-data.md  uploading-data.md  validating-data.md  visualizing-data.md
scripts/: link-checker-with-docker.sh
search/: search_index.json
sections/dev-guide/developer-guide/: index.html
sections/dev-guide/update-documentation/: index.html
sections/developer-guide/: index.html
sections/documentation/: index.html
sections/user-guide/account-creation/: index.html
sections/user-guide/browsing-processed-data/: index.html
sections/user-guide/exporting-data/: index.html
sections/user-guide/processing-data/: index.html
sections/user-guide/project-creation/: index.html
sections/user-guide/reviewing-data/: index.html
sections/user-guide/uploading-data/: index.html
sections/user-guide/validating-data/: index.html
sections/user-guide/visualizing-data/: index.html
